@@ -1,8 +1,8 @@
 Package: openair
 Type: Package
 Title: Tools for the analysis of air pollution data
-Version: 0.8-2
-Date: 2013-02-25
+Version: 0.8-3
+Date: 2013-03-18
 Authors@R: c(person("David", "Carslaw", role = c("aut", "cre"), email =
     "david.carslaw@kcl.ac.uk"), person("Karl", "Ropkins", role =
     "aut", email = "K.Ropkins@its.leeds.ac.uk"))
@@ -18,11 +18,11 @@ Imports:
     reshape2,
     mgcv,
     lattice,
+    latticeExtra,
     cluster,
     Rcpp,
     RColorBrewer
 Suggests:
-    latticeExtra,
     hexbin,
     RgoogleMaps,
     png,
