@@ -50,6 +50,7 @@ export(windRose)
 import(cluster)
 import(grid)
 import(lattice)
+import(latticeExtra)
 import(mgcv)
 import(plyr)
 import(RColorBrewer)
